--- a/package.json
+++ b/package.json
@@ -1,30 +1,26 @@
 {
-  "name": "foodFestival",
+  "name": "module-18-project",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "assets/js/script.js",
   "scripts": {
     "webpack": "webpack --watch",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryma1738/foodFestival.git"
+    "build": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/ryma1738/foodFestival/issues"
-  },
-  "homepage": "https://github.com/ryma1738/foodFestival#readme",
   "devDependencies": {
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0"
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^6.0.0",
+    "webpack": "^4.32.2",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
-    "jquery": "^3.6.0",
-    "popper.js": "^1.16.1"
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.16.0"
   }
 }
