--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "webpack": "webpack --watch",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "webpack-dev-server"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +16,9 @@
     "image-webpack-loader": "^6.0.0",
     "webpack": "^4.32.2",
     "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^4.0.0",
+    "webpack-pwa-manifest": "^4.3.0"
   },
   "dependencies": {
     "bootstrap": "^4.3.1",
